[project]
name = "research-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Rustam Alizada"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"


dependencies = [
    "langgraph (>=1.2.2,<2.0.0)",
    "langchain (>=1.3.2,<2.0.0)",
    "langchain-google-genai (>=4.2.4,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[project.scripts]
research-agent = "research_agent.main:main"
